# technopark-test-task

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
app/: main.py
app/api/: calc.py  calc_test.py
app/configs/: db.py  db_test.py  logging.py  logging_test.py  settings.py
app/engines/: postgres.py  postgres_test.py
app/repositories/: calc_result.py  calc_result_test.py
app/repositories/models/: base.py  calc_result.py
app/routers/: calc.py  calc_test.py
app/services/: calc.py  calc_test.py
app/session_manager/: session_manager.py  session_manager_test.py
migrations/: 001_create_calc_result_table.sql
